Change texts timeline

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                                     <div class="ag-timeline-card_info">
                                         <div class="ag-timeline-card_title">La première rencontre</div>
                                         <div class="ag-timeline-card_desc">
-                                            À l'école, on s'est croisés. Ni plus, ni moins.
-                                            Juste deux élèves partageant la même classe, et parfois je lui filais un coup de main en maths.
-                                            Qui aurait cru que ces modestes débuts mèneraient à quelque chose d'incroyable ?
+                                            On s'est croisés à l'école, dans la même classe.
+                                            De temps en temps, je lui filais un coup de main en maths.
+                                            Rien de bien extraordinaire au départ, juste le début d'une amitié qui allait prendre une toute autre direction.
                                         </div>
                                     </div>
                                 </div>
@@ -65,9 +65,9 @@
                                     <div class="ag-timeline-card_info">
                                         <div class="ag-timeline-card_title">Le début d'une aventure</div>
                                         <div class="ag-timeline-card_desc">
-                                            Le 6 mars 2017, dans un parc d'Enghien noyé sous la pluie, l'évidence nous a frappés.
-                                            On s'est dit : "Pourquoi pas nous ?".
-                                            Alors, on s'est mis ensemble pour partager un bout de chemin pas comme les autres.
+                                            Le 6 mars 2017, sous la pluie battante du parc d'Enghien, on a pris une décision impulsive.
+                                            On s'est dit : "Pourquoi ne pas tenter l'aventure ensemble ?".
+                                            Et voilà, c'était le début d'une nouvelle page de notre histoire.
                                         </div>
                                     </div>
                                 </div>
@@ -93,8 +93,8 @@
                                     <div class="ag-timeline-card_info">
                                         <div class="ag-timeline-card_title">Notre nouveau QG</div>
                                         <div class="ag-timeline-card_desc">
-                                            Le 28 août 2020, on a emménagé à Nivelles. Notre repaire à nous.
-                                            Entre cartons et meubles à monter, on s'est sentis chez nous dès le premier instant.
+                                            Le 28 août 2020, on a emménagé ensemble à Nivelles.
+                                            On avait plein de cartons à déballer et de meubles à assembler, mais c'était notre chez-nous, et c'était parfait.
                                         </div>
                                     </div>
                                 </div>
@@ -120,8 +120,8 @@
                                     <div class="ag-timeline-card_info">
                                         <div class="ag-timeline-card_title">L'arrivée de Freya</div>
                                         <div class="ag-timeline-card_desc">
-                                            Notre duo s'est agrandi le jour où on a adopté Freya, un chaton adorable.
-                                            Trois ans plus tard, elle est toujours aussi gentille et fait fondre nos cœurs.
+                                            Notre petit chaton Freya a rejoint notre foyer.
+                                            Depuis trois ans, elle nous réchauffe le cœur avec sa gentillesse et son caractère unique.
                                         </div>
                                     </div>
                                 </div>
@@ -147,8 +147,8 @@
                                     <div class="ag-timeline-card_info">
                                         <div class="ag-timeline-card_title">Les fiançailles</div>
                                         <div class="ag-timeline-card_desc">
-                                            Un jour magnifique, des circonstances incongrues, et elle a dit "Oui" !
-                                            Allez savoir pourquoi, c'est quand tout part en cacahuète que les choses deviennent mémorables.
+                                            Elle a dit "Oui" !
+                                            Après une journée magnifique, pleine de rebondissements inattendus, on a su que c'était le bon moment pour passer à l'étape suivante.
                                         </div>
                                     </div>
                                 </div>
@@ -174,8 +174,8 @@
                                     <div class="ag-timeline-card_info">
                                         <div class="ag-timeline-card_title">L'arrivée de Stella</div>
                                         <div class="ag-timeline-card_desc">
-                                            Et de deux ! On a craqué pour Stella, notre petite boule de poils espiègle.
-                                            Un an plus tard, on peut dire qu'elle est aussi adorable que démoniaque.
+                                            Stella, notre deuxième chaton, a fait son entrée dans nos vies.
+                                            Elle a un an maintenant, et c'est une véritable tornade de mignonnerie et de malice.
                                         </div>
                                     </div>
                                 </div>
@@ -201,9 +201,8 @@
                                     <div class="ag-timeline-card_info">
                                         <div class="ag-timeline-card_title">Le mariage</div>
                                         <div class="ag-timeline-card_desc">
-                                            Après plus de deux ans de fiançailles, on peut dire qu'on a fait dans l'atypique.
-                                            Mais nous y voilà enfin.
-                                            Prêts à dire "Oui" pour la vie, entourés de nos proches et avec l'amour comme boussole.
+                                            Après plus de deux ans de fiançailles pas tout à fait conventionnelles, on y est enfin.
+                                            Prêts à dire "Oui" pour la vie, entourés de ceux qui comptent le plus pour nous.
                                         </div>
                                     </div>
                                 </div>
