--- a/cadeaux.html
+++ b/cadeaux.html
@@ -54,15 +54,13 @@
                         </div>
                         <ul class="gift-card__grid ui-sortable list-unstyled" id="gifts_summary">
                           <li id="gift_8564384" class="js-element-wrapper gift-card mbm">
-                            <a href="https://marina-thibault.zankyou.com/be/liste-de-mariage/cadeau/id/8564384"
-                              class="gift-card__photo-wrapper">
+                            <span class="gift-card__photo-wrapper">
                               <img class="gift-card__photo lazyload js-dynasset" alt="Expérience inoubliable"
-                                data-src="https://asset1.zankyou.com/images/gift/286/157a/434/320/filter/crop/-/02b/5cb/9fb/1691244683.jpg"
                                 loading="lazy" src="./static/1691244683.jpg.webp"> <span
                                 class="gift-card__photo-title u-color--white">
                                 Expérience inoubliable<br>
                               </span>
-                            </a>
+                            </span>
                             <div class="gift-card__info pas">
                               <div class="gift-card__availability">
                                 <p class="gift-card__units mbn">
@@ -78,15 +76,13 @@
                             </div>
                           </li>
                           <li id="gift_8564383" class="js-element-wrapper gift-card mbm">
-                            <a href="https://marina-thibault.zankyou.com/be/liste-de-mariage/cadeau/id/8564383"
-                              class="gift-card__photo-wrapper">
+                            <span class="gift-card__photo-wrapper">
                               <img class="gift-card__photo lazyload js-dynasset" alt="Réalisation de nos rêves"
-                                data-src="https://asset1.zankyou.com/images/gift/069/ed2b/434/320/filter/crop/-/62c/022/c18/1691434955.jpg"
-                                loading="lazy" src="./static/1691434955.jpg.webp"> <span
+                                loading="lazy" src="./static/20230701_183131-2.jpg"> <span
                                 class="gift-card__photo-title u-color--white">
                                 Réalisation de nos rêves<br>
                               </span>
-                            </a>
+                            </span>
                             <div class="gift-card__info pas">
                               <div class="gift-card__availability">
                                 <p class="gift-card__units mbn">
