--- a/cadeaux.html
+++ b/cadeaux.html
@@ -29,84 +29,66 @@
 </head>
 
 <body class="lang-fr js-dom-ready-fired js-window-load-fired">
-  <div id="canvas">
-    <div class="js-blur event-theme__layout">
-      <div class="event-theme__wrapper event-theme__body-wrapper">
-        <div class="container-fluid pxn phn">
+  <div class="content--theme u-bg--white clearfix">
+    <div class="main-content--themes">
+        <div class="box-section pasm">
           <div class="row">
-            <div class="col-12 col-xl-12">
-              <div>
-                <div class="content--theme u-bg--white clearfix">
-                  <div class="main-content--themes">
-                    <div class="col-12 col-xl-10 offset-xl-1">
-                      <div class="box-section pasm">
-                        <div class="row">
-                          <div class="col-12">
-                            <div class="welcome-text text mbm">
-                              <p><span style="font-family: &#39;Josefin Sans&#39;, sans-serif; font-size: 18px;">Votre
-                                  présence à notre mariage est le plus beau des
-                                  cadeaux ! Cependant, nous savons que
-                                  beaucoup d'entre vous désirent nous faire un petit
-                                  cadeau. Un grand merci par avance
-                                  !</span></p>
-                            </div>
-                          </div>
-                        </div>
-                        <ul class="gift-card__grid ui-sortable list-unstyled" id="gifts_summary">
-                          <li id="gift_8564384" class="js-element-wrapper gift-card mbm">
-                            <span class="gift-card__photo-wrapper">
-                              <img class="gift-card__photo lazyload js-dynasset" alt="Expérience inoubliable"
-                                loading="lazy" src="./static/1691244683.jpg.webp"> <span
-                                class="gift-card__photo-title u-color--white">
-                                Expérience inoubliable<br>
-                              </span>
-                            </span>
-                            <div class="gift-card__info pas">
-                              <div class="gift-card__availability">
-                                <p class="gift-card__units mbn">
-                                </p>
-                              </div>
-                              <div class="gift-card__price u-font--semibold">
-                                <div class="gift-card__contribute">Contribution libre</div>
-                              </div>
-                              <div class="gift-card__action-give" data-crawler="hide">
-                                <a class="zk-button--square--green--full auto-width custom-primary__button">
-                                  BE26 0018 9040 6829 </a>
-                              </div>
-                            </div>
-                          </li>
-                          <li id="gift_8564383" class="js-element-wrapper gift-card mbm">
-                            <span class="gift-card__photo-wrapper">
-                              <img class="gift-card__photo lazyload js-dynasset" alt="Réalisation de nos rêves"
-                                loading="lazy" src="./static/20230701_183131-2.jpg"> <span
-                                class="gift-card__photo-title u-color--white">
-                                Réalisation de nos rêves<br>
-                              </span>
-                            </span>
-                            <div class="gift-card__info pas">
-                              <div class="gift-card__availability">
-                                <p class="gift-card__units mbn">
-                                </p>
-                              </div>
-                              <div class="gift-card__price u-font--semibold">
-                                <div class="gift-card__contribute">Contribution libre</div>
-                              </div>
-                              <div class="gift-card__action-give" data-crawler="hide">
-                                <a class="zk-button--square--green--full auto-width custom-primary__button">
-                                  BE26 0018 9040 6829 </a>
-                              </div>
-                            </div>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+            <div class="col-12">
+              <div class="welcome-text text mbm">
+                <p><span style="font-family: &#39;Josefin Sans&#39;, sans-serif; font-size: 18px;">Votre
+                    présence à notre mariage est le plus beau des
+                    cadeaux ! Cependant, nous savons que
+                    beaucoup d'entre vous désirent nous faire un petit
+                    cadeau. Un grand merci par avance
+                    !</span></p>
               </div>
             </div>
           </div>
+          <ul class="gift-card__grid ui-sortable list-unstyled" id="gifts_summary">
+            <li id="gift_8564384" class="js-element-wrapper gift-card mbm">
+              <span class="gift-card__photo-wrapper">
+                <img class="gift-card__photo lazyload js-dynasset" alt="Expérience inoubliable" loading="lazy"
+                  src="./static/1691244683.jpg.webp"> <span class="gift-card__photo-title u-color--white">
+                  Expérience inoubliable<br>
+                </span>
+              </span>
+              <div class="gift-card__info pas">
+                <div class="gift-card__availability">
+                  <p class="gift-card__units mbn">
+                  </p>
+                </div>
+                <div class="gift-card__price u-font--semibold">
+                  <div class="gift-card__contribute">Contribution libre</div>
+                </div>
+                <div class="gift-card__action-give" data-crawler="hide">
+                  <a class="zk-button--square--green--full auto-width custom-primary__button">
+                    BE26 0018 9040 6829 </a>
+                </div>
+              </div>
+            </li>
+            <li id="gift_8564383" class="js-element-wrapper gift-card mbm">
+              <span class="gift-card__photo-wrapper">
+                <img class="gift-card__photo lazyload js-dynasset" alt="Réalisation de nos rêves" loading="lazy"
+                  src="./static/20230701_183131-2.jpg"> <span class="gift-card__photo-title u-color--white">
+                  Réalisation de nos rêves<br>
+                </span>
+              </span>
+              <div class="gift-card__info pas">
+                <div class="gift-card__availability">
+                  <p class="gift-card__units mbn">
+                  </p>
+                </div>
+                <div class="gift-card__price u-font--semibold">
+                  <div class="gift-card__contribute">Contribution libre</div>
+                </div>
+                <div class="gift-card__action-give" data-crawler="hide">
+                  <a class="zk-button--square--green--full auto-width custom-primary__button">
+                    BE26 0018 9040 6829 </a>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
-      </div>
     </div>
   </div>
 </body>
